# ROS2-mini-projects

./: README.md
src/2series_py/: package.xml  setup.cfg  setup.py
src/2series_py/2series_py/: final_series.py  modify_series.py  series_gen.py
src/catch_em_turts_py/: package.xml  setup.cfg  setup.py
src/catch_em_turts_py/catch_em_turts_py/: turtle_controller.py  turtle_spwn_rm.py
src/my_cpp_pkg/: CMakeLists.txt  package.xml
src/my_cpp_pkg/src/: add_two_int_client.cpp  add_two_int_client_no_oop.cpp  add_two_int_server.cpp  my_node.cpp  robot_news_station.cpp  robot_receiver.cpp
src/my_py_pkg/: package.xml  setup.py
src/my_py_pkg/my_py_pkg/: add_two_int_client.py  add_two_int_client_no_oop.py  add_two_int_server.py  robot_receiver.py  robot_station.py  test_py.py
src/my_robot_bringup/: package.xml
src/my_robot_bringup/launch/: catch_em_turts.launch.py
src/my_robot_interfaces/: CMakeLists.txt  package.xml
src/my_robot_interfaces/msg/: MySensorInfo.msg
